...
                VStack {
                    HStack {
                        Text("breed:")
                            .foregroundColor(Color.secondary)
                        Text(catBreed.name)
...
                    // (-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-
                    
                    if let description = catBreed.description {
                        VStack {
                            Text("description")
...
                                        
                                        HStack {
                                            Text("origin:")
                                                .foregroundColor(Color.secondary)
                                            HStack(spacing: 2) {
...
                                        
                                        HStack {
                                            Text("country codes:")
                                                .foregroundColor(Color.secondary)
                                            HStack(spacing: 2) {
...
                                VStack {
                                    HStack {
                                        Text("country code:")
                                            .foregroundColor(Color.secondary)
                                        Text(countryCode)
...
                    // (-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-
                    
                    if let temperament = catBreed.temperament {
                        VStack {
                            Text("temperament")
...
                                if let adaptability = catBreed.adaptability {
                                    HStack(alignment: .center) {
                                        Text("adaptability:")
                                            .foregroundColor(Color.secondary)
                                        ForEach(1...adaptability, id: \.self) { _ in
...
                                if let energyLevel = catBreed.energyLevel {
                                    HStack(alignment: .center) {
                                        Text("energy level:")
                                            .foregroundColor(Color.secondary)
                                        ForEach(1...energyLevel, id: \.self) { _ in
...
                                if let affectionLevel = catBreed.affectionLevel {
                                    HStack(alignment: .center) {
                                        Text("affection level:")
                                            .foregroundColor(Color.secondary)
                                        ForEach(1...affectionLevel, id: \.self) { _ in
...
                                if let strangerFriendly = catBreed.strangerFriendly {
                                    HStack(alignment: .center) {
                                        Text("stranger friendly:")
                                            .foregroundColor(Color.secondary)
                                        ForEach(1...strangerFriendly, id: \.self) { _ in
...
                                if let childFriendly = catBreed.childFriendly {
                                    HStack(alignment: .center) {
                                        Text("child friendly:")
                                            .foregroundColor(Color.secondary)
                                        ForEach(1...childFriendly, id: \.self) { _ in
...
                                if let dogFriendly = catBreed.dogFriendly {
                                    HStack(alignment: .center) {
                                        Text("dog friendly:")
                                            .foregroundColor(Color.secondary)
                                        ForEach(1...dogFriendly, id: \.self) { _ in
...
                            if let grooming = catBreed.grooming {
                                HStack(alignment: .center) {
                                    Text("grooming:")
                                        .foregroundColor(Color.secondary)
                                    ForEach(1...grooming, id: \.self) { _ in
...
                                if let healthIssues = catBreed.healthIssues {
                                    HStack(alignment: .center) {
                                        Text("health issues:")
                                            .foregroundColor(Color.secondary)
                                        ForEach(1...healthIssues, id: \.self) { _ in
...
                                if let intelligence = catBreed.intelligence {
                                    HStack(alignment: .center) {
                                        Text("intelligence:")
                                            .foregroundColor(Color.secondary)
                                        ForEach(1...intelligence, id: \.self) { _ in
...
                                if let sheddingLevel = catBreed.sheddingLevel {
                                    HStack(alignment: .center) {
                                        Text("shedding level:")
                                            .foregroundColor(Color.secondary)
                                        ForEach(1...sheddingLevel, id: \.self) { _ in
...
                                if let socialNeeds = catBreed.socialNeeds {
                                    HStack(alignment: .center) {
                                        Text("social needs:")
                                            .foregroundColor(Color.secondary)
                                        ForEach(1...socialNeeds, id: \.self) { _ in
...
                                if let vocalisation = catBreed.vocalisation {
                                    HStack(alignment: .center) {
                                        Text("vocalisation:")
                                            .foregroundColor(Color.secondary)
                                        ForEach(1...vocalisation, id: \.self) { _ in
...
                    if let lifespan = catBreed.lifeSpan {
                        HStack {
                            Text("lifespan:")
                                .foregroundColor(Color.secondary)
                            Text(String(lifespan.lowerBound))
...
                                if let indoor = catBreed.indoor {
                                    HStack {
                                        Text("indoor:")
                                            .foregroundColor(Color.secondary)
                                        if indoor {
...
                                if let lap = catBreed.lap {
                                    HStack {
                                        Text("lap:")
                                            .foregroundColor(Color.secondary)
                                        if lap {
...
                                if let experimental = catBreed.experimental {
                                    HStack {
                                        Text("experimental:")
                                            .foregroundColor(Color.secondary)
                                        if experimental {
...
                                if let hairless = catBreed.hairless {
                                    HStack {
                                        Text("hairless:")
                                            .foregroundColor(Color.secondary)
                                        if hairless {
...
                                if let natural = catBreed.natural {
                                    HStack {
                                        Text("natural:")
                                            .foregroundColor(Color.secondary)
                                        if natural {
...
                                if let rare = catBreed.rare {
                                    HStack {
