...
                }
                .tag(1)
            
            BreedSpeciesView()
            
                .tabItem {
                    Label("breeds", systemImage: "books.vertical")
                }
                .tag(2)
            
            InfoSpeciesView()
            
                .tabItem {
...
